--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <center><h1>Lévêque Baptiste</h1>
-    <a href="./page/presentation/presentation.html" > Présentation</a>
-    <p><a href="./page/competence/porte_feuille_des_compétence.html" > Mes compétences</a></p>
-    <p><a href="./page/experience/expérience_pro.html" >Mon expérience professionnel</a></p>
-    <p><a href="./page/cv/moncv.html" > Mon CV</a></p>
-    <p><a href="./page/vielletechno/veilletechno.html" > veille technologique</a></p>
-    <p><a href="./page/contact/mecontacter.html" > Me contacter</a></p>
+    <button class="favorite styled" type="button"><a href="./page/presentation/presentation.html" > Présentation</a></button><br>
+    <button class="favorite styled" type="button"><a href="./page/competence/porte_feuille_des_compétence.html" > Mes compétences</a></button><br>
+    <button class="favorite styled" type="button"><a href="./page/experience/expérience_pro.html" >Mon expérience professionnel</a></button><br>
+    <button class="favorite styled" type="button"><a href="./page/cv/moncv.html" > Mon CV</a></button><br>
+    <button class="favorite styled" type="button"><a href="./page/vielletechno/veilletechno.html" > veille technologique</a></button><br>
+    <button class="favorite styled" type="button"><a href="./page/contact/mecontacter.html" > Me contacter</a></button><br>
 </center>
 </body>
 </html>
