--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lévêque baptiste portfolio</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <center><h1>Lévêque Baptiste</h1>
-    <button class="favorite styled" type="button"><a href="./page/presentation/presentation.html" > Présentation</a></button><br>
-    <button class="favorite styled" type="button"><a href="./page/competence/porte_feuille_des_compétence.html" > Mes compétences</a></button><br>
-    <button class="favorite styled" type="button"><a href="./page/experience/expérience_pro.html" >Mon expérience professionnel</a></button><br>
-    <button class="favorite styled" type="button"><a href="./page/cv/moncv.html" > Mon CV</a></button><br>
-    <button class="favorite styled" type="button"><a href="./page/vielletechno/veilletechno.html" > veille technologique</a></button><br>
-    <button class="favorite styled" type="button"><a href="./page/contact/mecontacter.html" > Me contacter</a></button><br>
+        <a href="./page/presentation/presentation.html" >
+            <button class="favorite styled" type="button">Présentation</button>
+        </a><br><br>
+        <a href="./page/competence/porte_feuille_des_compétence.html" >
+            <button class="favorite styled" type="button">Mes compétences</button>
+        </a><br><br>
+        <a href="./page/experience/expérience_pro.html" >
+            <button class="favorite styled" type="button">Expérience professionnel</button>
+        </a><br><br>
+        <a href="./page/cv/moncv.html" >
+            <button class="favorite styled" type="button">Mon CV</button>
+        </a><br><br>
+        <a href="./page/vielletechno/veilletechno.html" >
+            <button class="favorite styled" type="button">Veille technologique</button>
+        </a><br><br>
+        <a href="./page/contact/mecontacter.html" >
+            <button class="favorite styled" type="button">Me contacter</button>
+        </a><br><br>
 </center>
 </body>
 </html>
