--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    <center><h1>Lévêque Baptiste</h1>
+    <center><h1 class="titre">Lévêque Baptiste</h1>
         <a href="./page/presentation/presentation.html" >
             <button class="favorite styled" type="button">Présentation</button>
         </a><br><br>
